fix(playground): make the debug icon visible in dark mode

--- a/src/components/playground/playground.scss
+++ b/src/components/playground/playground.scss
@@ -211,12 +211,7 @@ section.example {
         margin: pxToRem(-52) pxToRem(-16) 0 0;
         border-radius: 50%;
 
-        background: {
-            image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="1.5"><path fill="none" d="M0 0h400v400H0z"/><path d="M194.97 254.84h77.555" fill="none" stroke="currentColor" stroke-opacity=".6" stroke-width="20"/><path d="M127.474 145.16l54.84 54.84M182.315 200l-54.84 54.84" fill="none" stroke="currentColor" stroke-width="20"/></svg>');
-            size: contain;
-            position: center;
-            repeat: no-repeat;
-        }
+        color: rgb(var(--kompendium-contrast-1200));
 
         opacity: 0.6;
 
